--- a/src/blocks/Header.css
+++ b/src/blocks/Header.css
@@ -1,45 +1,52 @@
 .header {
-  max-width: 880px;
-  margin-top: 45px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-bottom: 41px;
-  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  transition: margin-top 0.5s linear;
+	max-width: 880px;
+	margin-top: 45px;
+	margin-left: auto;
+	margin-right: auto;
+	padding-bottom: 41px;
+	border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	transition: margin-top 0.5s linear;
 }
 
 .header__logo {
-  background-image: url("../images/header-logo.svg");
-  background-size: contain;
-  background-repeat: no-repeat;
-  height: 33px;
-  width: 173px;
+	background-image: url("../images/header-logo.svg");
+	background-size: contain;
+	background-repeat: no-repeat;
+	height: 33px;
+	width: 173px;
 }
 
 .header__nav-button {
-  background-color: black;
-  background-image: url("../images/hamburger.svg");
-  background-size: contain;
-  height: 21px;
-  width: 24px;
+	display: none;
+	background-color: black;
+	background-image: url("../images/hamburger.svg");
+	background-size: contain;
+	height: 21px;
+	width: 24px;
 }
 
 @media screen and (max-width: 900px) {
-  .header {
-    margin-top: 28px;
-    padding-bottom: 32px;
-    max-width: 320px;
-  }
+	.header {
+		margin-top: 0;
+		padding-top: 28px;
+		padding-bottom: 32px;
+		max-width: 320px;
+	}
 
-  .header__logo {
-    height: 24px;
-    margin-left: 27px;
-  }
+	.header__logo {
+		height: 24px;
+		width: 126px;
+		margin-left: 27px;
+	}
 
-  .header_extended {
-    margin-top: 142px;
-  }
+	.header_extended {
+		margin-top: 142px;
+	}
+
+	.header__nav-button {
+		display: block;
+	}
 }
